--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,17 @@
   --white: #f7f7f7;
   --blue: #107ddd;
   --red: #e61b14;
+  scroll-behavior: smooth;
 }
 
 body {
   background-color: var(--blue);
   padding: 30px 60px;
   font-family: "Poppins", sans-serif;
+}
+
+p {
+  color: var(--black);
 }
 
 label,
@@ -38,15 +43,16 @@ h1 {
   align-items: start;
 }
 
-.main-section small {
+.main-section aside {
   color: var(--white);
   grid-column: 2 / 3;
   justify-self: end;
+  font-size: 0.8em;
 }
 
-.main-section small a {
+.main-section aside a {
+  margin-left: 0.2em;
   color: var(--white);
-  font-weight: bold;
   text-decoration: underline;
 }
 
@@ -145,33 +151,27 @@ h1 {
 }
 
 .abaixo-peso {
-  background: #b3c090 !important;
-  color: var(--white);
+  background: #a6c05d !important;
 }
 
 .peso-normal {
   background: #61cf2d !important;
-  color: var(--white);
 }
 
 .sobrepeso {
   background: #9ecf2d !important;
-  color: var(--white);
 }
 
 .obesidade-i {
   background: #e6a314 !important;
-  color: var(--white);
 }
 
 .obesidade-ii {
   background: #e66114 !important;
-  color: var(--white);
 }
 
 .obesidade-iii {
   background: #e61b14 !important;
-  color: var(--white);
 }
 
 .modal {
@@ -188,6 +188,11 @@ h1 {
   border-radius: 20px;
   font-size: 1.4rem;
   position: relative;
+  text-align: center;
+}
+
+.modal.active p {
+  font-weight: bold;
 }
 
 .error {
@@ -199,7 +204,6 @@ h1 {
   color: var(--red);
   font-size: 0.625em;
   margin-top: 0.3em;
-  font-weight: bold;
 }
 
 @media (max-width: 900px) {
@@ -211,7 +215,7 @@ h1 {
     margin-top: 0px;
   }
 
-  .main-section small {
+  .main-section aside {
     color: var(--white);
     grid-column: 1 / 2;
     justify-self: end;
